# eve-xui-manager

./: .dockerignore  .env.docker.example  .gitattributes  .gitignore  .replit  3XUI_V3_API.md  CHANGELOG.md  CLAUDE.md  DOCKER.md  Dockerfile  INSTALL.md  OFFLINE_INSTALL.md  README.md  RELEASE_NOTES.md  RELEASE_NOTES_1.7.0.md  RELEASE_NOTES_1.9.1.md  app.py  check_tx.py  docker-compose.yml  fix_local_db.py  fix_transaction_categories.py  init_db.py  inspect_all_db.py  inspect_db.py  install-redis-offline.sh  migrate_db.py  migrations.py  prepare-offline-bundle.sh  pyproject.toml  replit.md  requirements.txt  setup.sh  tailwind.config.js  temp_endpoint.py  test_access.py  test_access2.py  test_parse.py  test_reseller_maps.py  tmp_tx_response.txt  update_db.py  (+1 more)
.claude/: settings.json
attached_assets/: Pasted---1764559992517_1764559992517.txt  Pasted---1764609569752_1764609569752.txt  Pasted---1764655052869_1764655052869.txt  Pasted---1764655489658_1764655489658.txt  Pasted---1764830831791_1764830831792.txt  Pasted---1764831098485_1764831098486.txt  Pasted---1764832285683_1764832285684.txt  Pasted---1764832769412_1764832769413.txt  Pasted---1764833234351_1764833234352.txt  Pasted---1764833243316_1764833243316.txt  Pasted---1764834236601_1764834236602.txt  Pasted---1764834493506_1764834493507.txt  Pasted---1764834671919_1764834671920.txt  Pasted---1764835436908_1764835436908.txt  Pasted--Blocking-Overlay--1764572949581_1764572949581.txt  Pasted--CMS--1764652575015_1764652575015.txt  Pasted--Dash-Sub-QR-Code--1764598748201_1764598748201.txt  (+26 more)
docker/: Caddyfile  entrypoint.sh
(+38 files in other folders)
